--- a/src/admin/config.yml
+++ b/src/admin/config.yml
@@ -9,8 +9,8 @@ local_backend:
   allowed_hosts: ['192.168.0.1']
 
   # These lines should *not* be indented
-media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "static/images/uploads/" # Media files will be stored in the repo under static/images/uploads/
+public_folder: "/images/uploads/" # The src attribute for uploaded media will begin with /images/uploads/
 
 collections:
   - name: "posts" # Used in routes, e.g., /admin/collections/blog
