--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "npm-run-all -p dev:*",
     "build": "run-s build:*",
     "dev:11ty": "eleventy --serve",
-    "dev:css": "tailwindcss -i src/assets/css/tailwind.css -o _site/assets/css/tailwind.css --watch --postcss",
+    "dev:css": "tailwindcss -i src/assets/css/tailwind.css -o _site/assets/css/output.css --watch --postcss",
     "build:11ty": "eleventy",
-    "build:css": "tailwindcss -i src/assets/css/tailwind.css -o _site/assets/css/tailwind.css --postcss"
+    "build:css": "tailwindcss -i src/assets/css/tailwind.css -o _site/assets/css/output.css --postcss"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "@11ty/eleventy": "^3.0.0",
     "@tailwindcss/typography": "^0.5.16",
     "autoprefixer": "^10.4.20",
+    "concurrently": "^9.1.2",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
